--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="bikyjnvk@gmail.com">Email</a></p>
+          <p><a href="bikyjnvk@gmail.com">Mail</a></p>
         </div>
         <div class="contact-info-container">
           <img
