--- a/index.html
+++ b/index.html
@@ -364,11 +364,11 @@
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
-            src="./assets/email.png"
+            src="./assets/ig.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="bikyjnvk@gmail.com">Mail</a></p>
+          <p><a href="https://www.instagram.com/__aa.kash/profilecard/?igsh=NGFjb211bDJmNXN6">Ig</a></p>
         </div>
         <div class="contact-info-container">
           <img
