--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Smurti Akash</h1>
-        <p class="section__text__p2">Web Developer with a growing focus on machine learning.</p>
+        <p class="section__text__p2">B Tech Undergrad.</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -93,6 +93,7 @@
               <h3>Experience</h3>
               <p>Frontend Development</p>
               <p>Backend Development</p>
+              <p>Machine Learning(beginner)</p>
             </div>
             <div class="details-container">
               <img
